# telegram-click

./: .dockerignore  .env.example  Cargo.toml  README.md  docker-compose.scaled.yml
bot-service/: Cargo.toml
bot-service/src/: main.rs  rate_limiter.rs  state.rs
bot-service/src/grpc_client/: game_client.rs  leaderboard_client.rs  mod.rs  pool.rs
bot-service/src/telegram/: handlers.rs  keyboards.rs  messages.rs  mod.rs
bot-service/src/websocket/: handler.rs  leaderboard_broadcaster.rs  mod.rs
docker/: Dockerfile.bot-service  Dockerfile.game-service  Dockerfile.leaderboard-service
docker/pgbouncer/: pgbouncer.ini  userlist.txt
docker/postgres/: postgresql.conf
docs/: QUICK_START.md
docs/diagrams/: global-architecture.puml  redis-click.puml
game-service/: Cargo.toml
game-service/.sqlx/: query-206a138931b66d206ed568b770143c149e30346beb81cc975b62f411c4654770.json  query-a1bc6e32fc8df45ae2f1cb68ebd51c079a69fab9ed1d92947526d21229388dac.json
game-service/src/: lib.rs  main.rs
game-service/src/domain/: click_validator.rs  mod.rs  rate_limiter.rs
game-service/src/grpc_server/: game_server.rs  mod.rs
game-service/src/repository/: click_repo.rs  mod.rs  session_repo.rs  user_repo.rs
game-service/src/service/: click_batch_accumulator.rs  click_service.rs  mod.rs  redis_click_accumulator.rs  session_service.rs  user_service.rs
game-service/src/stream/: mod.rs  publisher.rs
game-service/tests/: test_click_repository.rs  test_session_repository.rs  test_user_repository.rs
game-service/tests/common/: mod.rs
leaderboard-service/: Cargo.toml
leaderboard-service/src/: lib.rs  main.rs
leaderboard-service/src/cache/: leaderboard_cache.rs  mod.rs  stats_cache.rs
leaderboard-service/src/grpc_server/: leaderboard_server.rs  mod.rs
leaderboard-service/src/repository/: leaderboard_repository.rs  mod.rs
leaderboard-service/src/stream_consumer/: click_stream_consumer.rs  mod.rs
migrations/: 001_init.sql  002_seed_test_data.sql  003_drop_clicks_table.sql  004_enhance_sessions.sql  005_add_leaderboard_indexes.sql  006_add_telegram_id_index.sql  007_leaderboard_materialized_view.sql  008_fix_materialized_view_concurrent_refresh.sql
mini-app/: .env  .env.example  package.json
mini-app/src/: App.tsx  index.html  index.tsx  telegram-webapp.d.ts  types.ts
mini-app/src/components/: Bitcoin3D.tsx  InitialLoading3D.tsx  Leaderboard3D.tsx  Loading3D.tsx  Stats.tsx
mini-app/src/hooks/: useTelegram.ts  useWebSocket.ts
mini-app/styles/: globals.css
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: clicker-performance.json  dashboard-provider.yml
nginx/: nginx.conf
proto/: game.proto
scripts/: build-linux.sh
shared/: Cargo.toml  build.rs
shared/src/: config.rs  errors.rs  lib.rs  telemetry.rs  types.rs
