[workspace]
members = [
    "shared",
    "bot-service",
    "game-service",
    "leaderboard-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Telegram Clicker Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-jaeger = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc-tonic"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.32.7", features = ["tokio-comp", "streams"] }

# Telegram bot
teloxide = { version = "0.17", features = ["macros"] }

# Web framework
axum = { version = "0.8.6", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"

# OpenSSL - vendored for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
