[package]
name = "bot-service"
version.workspace = true
edition = "2021"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# gRPC (client only)
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Telegram bot
teloxide = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenSSL (for cross-compilation)
openssl = { workspace = true, optional = true }

[features]
vendored = ["openssl"]

[build-dependencies]
tonic-prost-build = "0.14"
